@@ -1,6 +1,7 @@
 Revision history for Pod-Weaver
 
 {{$NEXT}}
+          further logging improvements; now uses Log::Dispatchouli explicitly
 
 3.100680  2010-03-09 23:38:30 America/New_York
           improve logging delegation to interoperate with recent DZ changes
